[gd_scene load_steps=6 format=3 uid="uid://23p6n27nn3fq"]

[ext_resource type="Texture2D" uid="uid://bi5wxw3amxf8s" path="res://map-selector.png" id="1_3btnl"]
[ext_resource type="Texture2D" uid="uid://dih5u3sfp3rfw" path="res://pizza-bubble.png" id="2_5c0lq"]
[ext_resource type="Script" path="res://map_selector.gd" id="2_xtf5i"]
[ext_resource type="Texture2D" uid="uid://b5ugehgv0dkos" path="res://heat-progress-circle.png" id="3_irka0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ij0ey"]
radius = 48.0104

[node name="MapSelector" type="Sprite2D"]
texture = ExtResource("1_3btnl")
script = ExtResource("2_xtf5i")

[node name="HeatMeter" type="TextureProgressBar" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
fill_mode = 4
texture_progress = ExtResource("3_irka0")

[node name="Bubble" type="Sprite2D" parent="."]
position = Vector2(-46, 93)
texture = ExtResource("2_5c0lq")

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource("CircleShape2D_ij0ey")

[connection signal="input_event" from="MouseArea" to="." method="_on_mouse_area_input_event"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_mouse_area_mouse_exited"]
